Fix bug where toolbar height would leave gap

--- a/koenig/kg-simplemde/src/css/simplemde.css
+++ b/koenig/kg-simplemde/src/css/simplemde.css
@@ -59,6 +59,7 @@
 
 .editor-toolbar.fullscreen {
 	width: 100%;
+	min-height: 50px;
 	background: #fff;
 	border: 0;
 	position: fixed;
